--- a/src/style.css
+++ b/src/style.css
@@ -102,16 +102,31 @@ textarea {
 
 .progress-bar {
   width: 100%;
+  height: 20px;
   background-color: var(--border-color);
+  position: relative;
   border-radius: 5px;
   overflow: hidden;
 }
 
 .progress-bar-fill {
-  height: 20px;
-  background-color: #4caf50;
+  height: 100%;
+  background-color: #4caf50; /* Green */
   width: 0%;
   transition: width 0.3s;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.progress-bar-missed {
+  height: 100%;
+  background-color: red; /* Red */
+  width: 0%;
+  transition: width 0.3s;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .toggle-theme-btn {
